k3s/cluster/apps/longhorn-backed/freshrss/workload/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
  namespace: freshrss
  labels:
    app.kubernetes.io/name: freshrss
    app.kubernetes.io/component: app
spec:
  ingressClassName: traefik
  rules:
    - host: rss.dege.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freshrss
                port:
                  number: 80
